--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
+**/config_prod.js
+**/*.crt
+**/*.key
+**/*.csr
 
 # compiled output
 /dist
