--- a/nodeApp/package.json
+++ b/nodeApp/package.json
@@ -9,23 +9,33 @@
     "cheerio": "latest",
     "connect-mongo": "latest",
     "express": "latest",
-    "express-session": "latest",
+    "express-force-ssl": "^0.3.2",
+    "express-session": "^1.15.6",
+    "http": "0.0.0",
+    "https": "^1.0.0",
+    "md5": "^2.2.1",
     "minimist": "latest",
     "moment": "latest",
     "mongodb": "latest",
     "mysql": "latest",
+    "parseurl": "^1.3.2",
     "path": "latest",
     "request": "latest",
-    "throng": "latest"
+    "sha1": "^1.1.1",
+    "throng": "latest",
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
-    "gulp-sass": "^3.1.0",
+    "eslint": "^4.18.0",
     "gulp": "latest",
-    "gulp-concat": "^2.6.1"
+    "gulp-concat": "^2.6.1",
+    "gulp-sass": "^3.1.0",
+    "nodemon": "^1.15.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "gulp": "./node_modules/.bin/gulp"
+    "gulp": "./node_modules/.bin/gulp",
+    "live": "nodemon app.js"
   },
   "author": "a.kovalenko",
   "license": "MIT"
