Json web token implementation in server side

--- a/nodeApp/package.json
+++ b/nodeApp/package.json
@@ -10,9 +10,11 @@
     "connect-mongo": "latest",
     "express": "latest",
     "express-force-ssl": "^0.3.2",
+    "express-jwt": "^5.3.1",
     "express-session": "^1.15.6",
     "http": "0.0.0",
     "https": "^1.0.0",
+    "jsonwebtoken": "^8.2.0",
     "md5": "^2.2.1",
     "minimist": "latest",
     "moment": "latest",
