feign logger, fix for /exchange

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 #spring.mvc.view.prefix=/WEB-INF/jsp/
 #spring.mvc.view.suffix=.jsp
+
+logging.level.com.bankapi.api.IExchangeClient=DEBUG
+feign.client.config.default.loggerLevel=FULL
